create-inbound-rule.tf
resource "aws_security_group_rule" "allow_all_inbound_traffic" {
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "all"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_all_traffic.id
}

resource "aws_security_group_rule" "allow_ssh_inbound_traffic" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_ssh_traffic.id
}

resource "aws_security_group_rule" "allow_jenkins_inbound_traffic" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_jenkins_traffic.id
}

resource "aws_security_group_rule" "allow_http_inbound_traffic" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.allow_http_traffic.id
}
